--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "config": {
-  "commitizen": {
-    "path": "cz-conventional-changelog"
-  }
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "scripts": {
     "dev": "next dev --turbopack",
@@ -25,9 +25,16 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -54,6 +61,7 @@
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
